--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ java {
 }
 
 group "io.kestra.plugin"
-description 'Plugin template for Kestra'
+description 'Plugin for Integrating Multiple Social inputs'
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = "UTF-8"
@@ -51,6 +51,9 @@ dependencies {
     annotationProcessor group: "io.kestra", name: "processor", version: kestraVersion
     compileOnly group: "io.kestra", name: "core", version: kestraVersion
     compileOnly group: "io.kestra", name: "script", version: kestraVersion
+
+    // String Utils
+    implementation "org.apache.commons:commons-text:1.12.0"
 }
 
 
@@ -157,8 +160,8 @@ jar {
     manifest {
         attributes(
                 "X-Kestra-Name": project.name,
-                "X-Kestra-Title": "Template",
-                "X-Kestra-Group": project.group + ".templates",
+                "X-Kestra-Title": "Hackfrost",
+                "X-Kestra-Group": project.group + ".hackfrost",
                 "X-Kestra-Description": project.description,
                 "X-Kestra-Version": project.version
         )
